* Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed a URL in the README.md

* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 6.1.2-0
- Static asset updates for puppet 5
- Update badges in README.md

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.1.2-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Sat Mar 17 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.2-0
- Updated to work with Puppet 5 and OEL

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Update upperbound on puppetlabs/concat version to < 5.0.0
- Fix trivial string lint issue

* Thu Nov 02 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Allowed for control of specific versions of the packages in this
  module with two new parameters:
  - samba_package_ensure
  - autofs_package_ensure
- Support Puppet 5

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Update concat version in metadata.json

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Confine puppet version in metadata.json

* Tue Jan 10 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated pki scheme
- Application certs now managed in /etc/pki/simp_apps/autofs/x509

* Mon Jan 02 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Ripped out all NFS materials
- NFS can now work with the configuration of autofs but there should not have
  been a strong dependency the other way

* Thu Dec 08 2016 Nick Markowski <nmarkowswki@keywcorp.com> - 6.0.0-0
- Updated global catalysts
- Strong typed
- Changed empty string defaults to undef

* Thu Dec 02 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
- Removed pupmod-simp-sysctl in favor of augeas-sysctl

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2
