@@ -1,6 +1,6 @@
 {
   "name": "simp-autofs",
-  "version": "6.1.3",
+  "version": "6.1.4",
   "author": "SIMP Team",
   "summary": "manages autofs",
   "license": "Apache-2.0",
