@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.4-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
 - Expanded the upper limit of the concat and stdlib Puppet module versions
 - Fixed a URL in the README.md
